# scriptorium-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 2023_10_11_0124-0570d0de53f6_.py
docs/ERD/: user.puml
scriptorium/: __main__.py  config.py  database.py  exceptions.py  logging.py
scriptorium/auth/: controller.py  exceptions.py  models.py  repository.py  schemas.py  service.py
scriptorium/users/: controller.py  models.py  repository.py  schemas.py  service.py
tests/auth/: auth_service_unit_test.py
tests/users/: users_service_unit_test.py
