[tool.poetry]
name = "scriptorium"
version = "0.1.0"
description = ""
authors = ["Daniel Moraes <danielbibit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
pydantic-settings = "^2.0.3"
faker = "^19.10.0"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.2"
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'scripts:dev'
migrate = 'scripts:migrate'

[tool.black]
line-length = 110

[tool.ruff]
select = [
    "I",
    "E",
    "W",
    "F",
    "C",
]
ignore = [
    "E501",  # line too long, handled by black
]
exclude = [
    "env.py", #TODO remove this
]
